added scala examples